Bug 282777 - Implement index() xpath function.  Patch by aaronr@us.ibm.com, r=sicking, beaufour